// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call-expression.js - {"experimentalTernaries":true} format 1`] = `
====================================options=====================================
experimentalTernaries: true
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Callee
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)(path.dirname(path.resolve(filePath)));

stopDirectory = (useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer)?.(path.dirname(path.resolve(filePath)));

// Arguments
stopDirectory = findProjectRootWithoutCache(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)();

stopDirectory = findProjectRootWithoutCache?.(useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer);

=====================================output=====================================
// Callee
stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)(
  path.dirname(path.resolve(filePath)),
);

stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.(
  path.dirname(path.resolve(filePath)),
);

// Arguments
stopDirectory = findProjectRootWithoutCache(
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer,
)();

stopDirectory = findProjectRootWithoutCache?.(
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer,
);

================================================================================
`;

exports[`call-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Callee
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)(path.dirname(path.resolve(filePath)));

stopDirectory = (useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer)?.(path.dirname(path.resolve(filePath)));

// Arguments
stopDirectory = findProjectRootWithoutCache(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)();

stopDirectory = findProjectRootWithoutCache?.(useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer);

=====================================output=====================================
// Callee
stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
)(path.dirname(path.resolve(filePath)));

stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
)?.(path.dirname(path.resolve(filePath)));

// Arguments
stopDirectory = findProjectRootWithoutCache(
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer,
)();

stopDirectory = findProjectRootWithoutCache?.(
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer,
);

================================================================================
`;

exports[`member-expression.js - {"experimentalTernaries":true} format 1`] = `
====================================options=====================================
experimentalTernaries: true
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Object
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer).directory;

stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.directory;
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)[directory];

stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.[directory];

// Property
stopDirectory = directories[(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)];

stopDirectory = directories[(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)];

=====================================output=====================================
// Object
stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer).directory;

stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.directory;
stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)[directory];

stopDirectory = (
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.[directory];

// Property
stopDirectory =
  directories[
    useCache ?
      memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
  ];

stopDirectory =
  directories[
    useCache ?
      memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
  ];

================================================================================
`;

exports[`member-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// Object
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer).directory;

stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.directory;
stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)[directory];

stopDirectory = (useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)?.[directory];

// Property
stopDirectory = directories[(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)];

stopDirectory = directories[(useCache
  ? memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer)];

=====================================output=====================================
// Object
stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
).directory;

stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
)?.directory;
stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
)[directory];

stopDirectory = (
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer
)?.[directory];

// Property
stopDirectory =
  directories[
    useCache
      ? memoizedFindProjectRoot_longer_longer_longer_longer
      : findProjectRootWithoutCache_longer_longer_longer_longer
  ];

stopDirectory =
  directories[
    useCache
      ? memoizedFindProjectRoot_longer_longer_longer_longer
      : findProjectRootWithoutCache_longer_longer_longer_longer
  ];

================================================================================
`;

exports[`new-expression.js - {"experimentalTernaries":true} format 1`] = `
====================================options=====================================
experimentalTernaries: true
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
projectRootFinder = new (
  useCache ? MemoizedProjectRoot_longer_longer_longer_longer : ProjectRootFinder_longer_longer_longer_longer
)();

projectRootFinder = new (
  ProjectRootFinder
)(useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer);

=====================================output=====================================
projectRootFinder = new (
  useCache ?
    MemoizedProjectRoot_longer_longer_longer_longer
  : ProjectRootFinder_longer_longer_longer_longer)();

projectRootFinder = new ProjectRootFinder(
  useCache ?
    memoizedFindProjectRoot_longer_longer_longer_longer
  : findProjectRootWithoutCache_longer_longer_longer_longer,
);

================================================================================
`;

exports[`new-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
projectRootFinder = new (
  useCache ? MemoizedProjectRoot_longer_longer_longer_longer : ProjectRootFinder_longer_longer_longer_longer
)();

projectRootFinder = new (
  ProjectRootFinder
)(useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer);

=====================================output=====================================
projectRootFinder = new (
  useCache
    ? MemoizedProjectRoot_longer_longer_longer_longer
    : ProjectRootFinder_longer_longer_longer_longer
)();

projectRootFinder = new ProjectRootFinder(
  useCache
    ? memoizedFindProjectRoot_longer_longer_longer_longer
    : findProjectRootWithoutCache_longer_longer_longer_longer,
);

================================================================================
`;
